[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
build = "build.rs"
edition = "2021"
exclude = ["artifacts.json", "index.node"]
license = "Apache-2.0"
name = "html_node"
publish = false
version = "0.1.0"

[lib]
bench = false
crate-type = ["cdylib"]

[features]

[build-dependencies]
napi-build = { version = "1" }

[dependencies]
anyhow = "1"
napi = { version = "2", default-features = false, features = [
  "napi3",
  "serde-json",
] }
napi-derive = { version = "2", default-features = false, features = [
  "type-def",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
swc_cached = "0.3.14"
swc_common = "0.29.5"
swc_error_reporters = "0.13.5"
swc_html = { version = "0.79.11", features = ["minifier"] }
swc_html_minifier = "0.76.11"
swc_nodejs_common = "0.0.1"
tracing = { version = "0.1.36", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
