[package]
authors = ["Mathis Møller"]
build = "build.rs"
edition = "2021"
exclude = ["artifacts.json", "index.node"]
license = "Apache-2.0"
name = "lint_node"
publish = false
version = "0.1.0"

[lib]
bench = false
crate-type = ["cdylib"]

[features]

[build-dependencies]
napi-build = { version = "2" }

[dependencies]
anyhow = "1"
napi = { version = "2", default-features = false, features = [
  "napi3",
  "serde-json",
] }
napi-derive = { version = "2", default-features = false, features = [
  "type-def",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
swc_atoms = "0.4.24"
swc_common = { version = "0.29.13", features = ["diagnostic-serde"] }
swc_ecma_ast = "0.94.18"
swc_ecma_lints = "0.66.44"
swc_ecma_parser = "0.122.25"
swc_ecma_transforms_base = "0.111.43"
swc_ecma_visit = "0.80.18"
swc_error_reporters = "0.13.13"
swc_nodejs_common = "0.0.4"
tracing = { version = "0.1.37", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
